--- a/adam_shop/index.html
+++ b/adam_shop/index.html
@@ -625,7 +625,8 @@
                             <h4>About ADAM SHOP</h4>
                             <p>
                                 <font size="2" face="Times New Roman">
-                                    Chào mừng bạn đến với ADAM - nơi cung cấp các sản phẩm thời trang đẳng cấp và chất lượng nhất! ADAM là một trang web bán quần áo với sứ mệnh mang đến cho khách hàng những sản phẩm thời trang độc đáo và phong cách. Với sự kết hợp hoàn hảo giữa các kiểu dáng hiện đại và chất liệu cao cấp, chúng tôi cam kết mang đến cho bạn sự thoải mái và tự tin trong mỗi bộ trang phục.
+                                    Welcome to ADAM - the place that provides the most classy and quality fashion products! ADAM is a clothing website with a mission to bring customers unique and stylish fashion products.
+                                    With the perfect combination of modern styling and premium materials, we're committed to bringing you comfort and confidence in every outfit.
                                 </font>
                             </p>
                             <ul>
