--- a/adam_shop/shop-detail.html
+++ b/adam_shop/shop-detail.html
@@ -350,6 +350,20 @@
                     </div>
                 </div>
             </div>
+            <!-- comment and evaluate-->
+            <div id="rating">
+                <form action="" method="POST">
+                    <h3>Đánh giá</h3>
+                    <input class="star" type="radio" name="rate" value="5" checked> 5
+                    <input class="star" type="radio" name="rate" value="4"> 4
+                    <input class="star" type="radio" name="rate" value="3"> 3
+                    <input class="star" type="radio" name="rate" value="2"> 2
+                    <input class="star" type="radio" name="rate" value="1"> 1
+                    <br />
+                    <input type="submit" name="rate_submit" value="Rate" id="submit-button">
+                </form>
+            </div>
+
 
             <div class="row my-5">
                 <div class="col-lg-12">
