--- a/adam_shop/my-account.html
+++ b/adam_shop/my-account.html
@@ -52,7 +52,7 @@
                                     <i class="fab fa-opencart"></i> 50% - 80% off on Fashion
                                 </li>
                                 <li>
-                                    <i class="fab fa-opencart"></i> 20% off Entire Purchase Promo code: offT20
+                                    <i class="fab fa-opencart"></i> 20% off Entire Purchase Promo code: ads2023
                                 </li>
                                 <li>
                                     <i class="fab fa-opencart"></i> Off 50%! Shop Now
@@ -64,7 +64,7 @@
                                     <i class="fab fa-opencart"></i> 50% - 80% off on Fashion
                                 </li>
                                 <li>
-                                    <i class="fab fa-opencart"></i> 20% off Entire Purchase Promo code: offT20
+                                    <i class="fab fa-opencart"></i> 20% off Entire Purchase Promo code: ads2023
                                 </li>
                                 <li>
                                     <i class="fab fa-opencart"></i> Off 50%! Shop Now
@@ -88,7 +88,7 @@
                         <ul>
                             <li><a href="#">My Account</a></li>
                             <li><a href="#">Our location</a></li>
-                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="contact-us.html">Contact Us</a></li>
                         </ul>
                     </div>
                 </div>
