--- a/adam_shop/shop.html
+++ b/adam_shop/shop.html
@@ -80,7 +80,7 @@
 					</select>
                     </div>
                     <div class="right-phone-box">
-                        <p>Call US :- <a href="#"> +84 123 456 789</a></p>
+                        <p>Call US :- <a href="#"> +84 392 362 421</a></p>
                     </div>
                     <div class="our-link">
                         <ul>
@@ -462,7 +462,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="why-text">
-                                                    <h4>Lorem ipsum dolor sit amet</h4>
+                                                    <h4>Tactical Wire Breathable Mask Black camouflage</h4>
                                                     <h5> $9.79</h5>
                                                 </div>
                                             </div>
