--- a/adam_shop/index.html
+++ b/adam_shop/index.html
@@ -83,7 +83,7 @@
 					</select>
                     </div>
                     <div class="right-phone-box">
-                        <p>Call US :- <a href="#"> +84 392 362 421</a></p>
+                        <p>Call US : <a href="#"> +84 392 362 421</a></p>
                     </div>
                     <div class="our-link">
                         <ul>
@@ -256,7 +256,6 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>Welcome To <br> ADAM SHOP</strong></h1>
-                            <p class="m-b-40">See how your users experience your website in realtime or view <br> trends to see any changes in performance over time.</p>
                             <p><a class="btn hvr-hover" href="#">Shop New</a></p>
                         </div>
                     </div>
@@ -268,7 +267,6 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>Welcome To <br> ADAM SHOP</strong></h1>
-                            <p class="m-b-40">See how your users experience your website in realtime or view <br> trends to see any changes in performance over time.</p>
                             <p><a class="btn hvr-hover" href="#">Shop New</a></p>
                         </div>
                     </div>
@@ -280,7 +278,6 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>Welcome To <br> ADAM</strong></h1>
-                            <p class="m-b-40">See how your users experience your website in realtime or view <br> trends to see any changes in performance over time.</p>
                             <p><a class="btn hvr-hover" href="#">Shop New</a></p>
                         </div>
                     </div>
@@ -470,8 +467,8 @@
                         </div>
                         <div class="blog-content">
                             <div class="title-blog">
-                                <h3>Fusce in augue non nisi fringilla</h3>
-                                <p></p>
+                                <h3>Mr.David</h3>
+                                <p>There are many hot fashion models here. Very suitable for teenagers.</p>
                             </div>
                             <ul class="option-blog">
                                 <li><a href="#" data-toggle="tooltip" data-placement="right" title="Likes"><i class="far fa-heart"></i></a></li>
@@ -488,8 +485,8 @@
                         </div>
                         <div class="blog-content">
                             <div class="title-blog">
-                                <h3>Fusce in augue non nisi fringilla</h3>
-                                <p>Nulla ut urna egestas, porta libero id, suscipit orci. Quisque in lectus sit amet urna dignissim feugiat. Mauris molestie egestas pharetra. Ut finibus cursus nunc sed mollis. Praesent laoreet lacinia elit id lobortis.</p>
+                                <h3>Mr.Alex</h3>
+                                <p>There is no such thing as unnecessary, carry it freely and take care of it. Everyone must be a great gentleman.</p>
                             </div>
                             <ul class="option-blog">
                                 <li><a href="#" data-toggle="tooltip" data-placement="right" title="Likes"><i class="far fa-heart"></i></a></li>
@@ -506,8 +503,9 @@
                         </div>
                         <div class="blog-content">
                             <div class="title-blog">
-                                <h3>Fusce in augue non nisi fringilla</h3>
-                                <p>Nulla ut urna egestas, porta libero id, suscipit orci. Quisque in lectus sit amet urna dignissim feugiat. Mauris molestie egestas pharetra. Ut finibus cursus nunc sed mollis. Praesent laoreet lacinia elit id lobortis.</p>
+                                <h3>Mrs.Emma</h3>
+                                <p>
+                                    My husband really loves the shop since buying clothes here. Hope the store grows.</p>
                             </div>
                             <ul class="option-blog">
                                 <li><a href="#" data-toggle="tooltip" data-placement="right" title="Likes"><i class="far fa-heart"></i></a></li>
@@ -621,7 +619,7 @@
                             <h4>About ADAM SHOP</h4>
                             <p>
                                 <font size="2" face="Times New Roman">
-                                    Chào mừng bạn đến với ADAM - nơi cung cấp các sản phẩm thời trang đẳng cấp và chất lượng nhất! ADAM là một trang web bán quần áo với sứ mệnh mang đến cho khách hàng những sản phẩm thời trang độc đáo và phong cách. Với sự kết hợp hoàn hảo giữa các kiểu dáng hiện đại và chất liệu cao cấp, chúng tôi cam kết mang đến cho bạn sự thoải mái và tự tin trong mỗi bộ trang phục.
+                                    Welcome to ADAM - the place that provides the most classy and quality fashion products! ADAM is a clothing website with a mission to bring customers unique and stylish fashion products. With the perfect combination of modern styling and premium materials, we're committed to bringing you comfort and confidence in every outfit.
                                 </font>
                             </p>
                             <ul>
@@ -639,8 +637,8 @@
                         <div class="footer-link">
                             <h4>Information</h4>
                             <ul>
-                                <li><a href="#">About Us</a></li>
-                                <li><a href="#">Customer Service</a></li>
+                                <li><a href="about.html">About Us</a></li>
+                                <li><a href="service.html">Customer Service</a></li>
                                 <li><a href="#">Our Sitemap</a></li>
                                 <li><a href="#">Terms &amp; Conditions</a></li>
                                 <li><a href="#">Privacy Policy</a></li>
