--- a/adam_shop/shop-detail.html
+++ b/adam_shop/shop-detail.html
@@ -52,7 +52,7 @@
                                     <i class="fab fa-opencart"></i> 50% - 80% off on Fashion
                                 </li>
                                 <li>
-                                    <i class="fab fa-opencart"></i> 20% off Entire Purchase Promo code: offT20
+                                    <i class="fab fa-opencart"></i> 20% off Entire Purchase Promo code: ads2023
                                 </li>
                                 <li>
                                     <i class="fab fa-opencart"></i> Off 50%! Shop Now
@@ -64,7 +64,7 @@
                                     <i class="fab fa-opencart"></i> 50% - 80% off on Fashion
                                 </li>
                                 <li>
-                                    <i class="fab fa-opencart"></i> 20% off Entire Purchase Promo code: offT20
+                                    <i class="fab fa-opencart"></i> 20% off Entire Purchase Promo code: ads2023
                                 </li>
                                 <li>
                                     <i class="fab fa-opencart"></i> Off 50%! Shop Now
@@ -82,7 +82,7 @@
 					</select>
                     </div>
                     <div class="right-phone-box">
-                        <p>Call US :- <a href="#"> +11 900 800 100</a></p>
+                        <p>Call US :- <a href="#"> +84 392 362 421</a></p>
                     </div>
                     <div class="our-link">
                         <ul>
