--- a/adam_shop/wishlist.html
+++ b/adam_shop/wishlist.html
@@ -52,7 +52,7 @@
                                     <i class="fab fa-opencart"></i> 50% - 80% off on Fashion
                                 </li>
                                 <li>
-                                    <i class="fab fa-opencart"></i> 20% off Entire Purchase Promo code: offT20
+                                    <i class="fab fa-opencart"></i> 20% off Entire Purchase Promo code: ads2023
                                 </li>
                                 <li>
                                     <i class="fab fa-opencart"></i> Off 50%! Shop Now
@@ -64,7 +64,7 @@
                                     <i class="fab fa-opencart"></i> 50% - 80% off on Fashion
                                 </li>
                                 <li>
-                                    <i class="fab fa-opencart"></i> 20% off Entire Purchase Promo code: offT20
+                                    <i class="fab fa-opencart"></i> 20% off Entire Purchase Promo code: ads2023
                                 </li>
                                 <li>
                                     <i class="fab fa-opencart"></i> Off 50%! Shop Now
@@ -76,19 +76,17 @@
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <div class="custom-select-box">
                         <select id="basic" class="selectpicker show-tick form-control" data-placeholder="$ USD">
-						<option>¥ JPY</option>
 						<option>$ USD</option>
-						<option>€ EUR</option>
 					</select>
                     </div>
                     <div class="right-phone-box">
-                        <p>Call US :- <a href="#"> +11 900 800 100</a></p>
+                        <p>Call US :- <a href="#"> +84 392 362 421</a></p>
                     </div>
                     <div class="our-link">
                         <ul>
-                            <li><a href="#">My Account</a></li>
+                            <li><a href="my-account.html">My Account</a></li>
                             <li><a href="#">Our location</a></li>
-                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="contact-us.html">Contact Us</a></li>
                         </ul>
                     </div>
                 </div>
@@ -288,7 +286,7 @@
                                     </td>
                                     <td class="name-pr">
                                         <a href="#">
-									Lorem ipsum dolor sit amet
+                                            Strange Pocket Pants - black / L
 								</a>
                                     </td>
                                     <td class="price-pr">
@@ -312,7 +310,7 @@
                                     </td>
                                     <td class="name-pr">
                                         <a href="#">
-									Lorem ipsum dolor sit amet
+                                            Tactical Wire Breathable Mask Black camouflage
 								</a>
                                     </td>
                                     <td class="price-pr">
@@ -336,7 +334,7 @@
                                     </td>
                                     <td class="name-pr">
                                         <a href="#">
-									Lorem ipsum dolor sit amet
+                                            Hazard 4 Freelance Photo Sling Pack
 								</a>
                                     </td>
                                     <td class="price-pr">
@@ -459,7 +457,7 @@
                             <h4>About ADAM SHOP</h4>
                             <p>
                                 <font size="2" face="Times New Roman">
-                                    Chào mừng bạn đến với ADAM - nơi cung cấp các sản phẩm thời trang đẳng cấp và chất lượng nhất! ADAM là một trang web bán quần áo với sứ mệnh mang đến cho khách hàng những sản phẩm thời trang độc đáo và phong cách. Với sự kết hợp hoàn hảo giữa các kiểu dáng hiện đại và chất liệu cao cấp, chúng tôi cam kết mang đến cho bạn sự thoải mái và tự tin trong mỗi bộ trang phục.
+                                    Welcome to ADAM - the place that provides the most classy and quality fashion products! ADAM is a clothing website with a mission to bring customers unique and stylish fashion products. With the perfect combination of modern styling and premium materials, we're committed to bringing you comfort and confidence in every outfit.
                                 </font>
                             </p>
                             <ul>
