--- a/adam_shop/shop-detail.html
+++ b/adam_shop/shop-detail.html
@@ -76,9 +76,7 @@
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <div class="custom-select-box">
                         <select id="basic" class="selectpicker show-tick form-control" data-placeholder="$ USD">
-						<option>¥ JPY</option>
 						<option>$ USD</option>
-						<option>€ EUR</option>
 					</select>
                     </div>
                     <div class="right-phone-box">
@@ -86,9 +84,9 @@
                     </div>
                     <div class="our-link">
                         <ul>
-                            <li><a href="#">My Account</a></li>
+                            <li><a href="my-account.html">My Account</a></li>
                             <li><a href="#">Our location</a></li>
-                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="contact-us.html">Contact Us</a></li>
                         </ul>
                     </div>
                 </div>
@@ -296,13 +294,12 @@
                 </div>
                 <div class="col-xl-7 col-lg-7 col-md-6">
                     <div class="single-product-details">
-                        <h2>Fachion Lorem ipsum dolor sit amet</h2>
-                        <h5> <del>$ 60.00</del> $40.79</h5>
-                        <p class="available-stock"><span> More than 20 available / <a href="#">8 sold </a></span>
+                        <h2>Leather long sleeve shirt.</h2>
+                        <h5> <del>$ 50.00</del> $35.40</h5>
+                        <p class="available-stock"><span> More than 20 available / 8 sold</span>
                             <p>
                                 <h4>Short Description:</h4>
-                                <p>Nam sagittis a augue eget scelerisque. Nullam lacinia consectetur sagittis. Nam sed neque id eros fermentum dignissim quis at tortor. Nullam ultricies urna quis sem sagittis pharetra. Nam erat turpis, cursus in ipsum at,
-                                    tempor imperdiet metus. In interdum id nulla tristique accumsan. Ut semper in quam nec pretium. Donec egestas finibus suscipit. Curabitur tincidunt convallis arcu. </p>
+                                <p>Shirt size S (45kg-58kg) </br> M (59kg-68kg) </br> L (69kg -79kg) </br> The product is made of high quality PU leather material, standard size auth version. </p>
                                 <ul>
                                     <li>
                                         <div class="form-group size-st">
@@ -312,10 +309,6 @@
 									<option value="0">S</option>
 									<option value="1">M</option>
 									<option value="1">L</option>
-									<option value="1">XL</option>
-									<option value="1">XXL</option>
-									<option value="1">3XL</option>
-									<option value="1">4XL</option>
 								</select>
                                         </div>
                                     </li>
@@ -355,7 +348,6 @@
                 <div class="col-lg-12">
                     <div class="title-all text-center">
                         <h1>Featured Products</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet lacus enim.</p>
                     </div>
                     <div class="featured-products-box owl-carousel owl-theme">
                         <div class="item">
@@ -372,8 +364,8 @@
                                     </div>
                                 </div>
                                 <div class="why-text">
-                                    <h4>Lorem ipsum dolor sit amet</h4>
-                                    <h5> $9.79</h5>
+                                    <h4>Strange Pocket Pants - black / L</h4>
+                                    <h5> $80.00</h5>
                                 </div>
                             </div>
                         </div>
@@ -391,8 +383,8 @@
                                     </div>
                                 </div>
                                 <div class="why-text">
-                                    <h4>Lorem ipsum dolor sit amet</h4>
-                                    <h5> $9.79</h5>
+                                    <h4>Tactical Wire Breathable Mask Black camouflage</h4>
+                                    <h5> $60.00</h5>
                                 </div>
                             </div>
                         </div>
@@ -410,8 +402,8 @@
                                     </div>
                                 </div>
                                 <div class="why-text">
-                                    <h4>Lorem ipsum dolor sit amet</h4>
-                                    <h5> $9.79</h5>
+                                    <h4>Hazard 4 Freelance Photo Sling Pack</h4>
+                                    <h5> $30.00</h5>
                                 </div>
                             </div>
                         </div>
@@ -429,8 +421,8 @@
                                     </div>
                                 </div>
                                 <div class="why-text">
-                                    <h4>Lorem ipsum dolor sit amet</h4>
-                                    <h5> $9.79</h5>
+                                    <h4>Luxury watches</h4>
+                                    <h5> $50.00</h5>
                                 </div>
                             </div>
                         </div>
@@ -616,7 +608,7 @@
                             <h4>About ADAM SHOP</h4>
                             <p>
                                 <font size="2" face="Times New Roman">
-                                    Chào mừng bạn đến với ADAM - nơi cung cấp các sản phẩm thời trang đẳng cấp và chất lượng nhất! ADAM là một trang web bán quần áo với sứ mệnh mang đến cho khách hàng những sản phẩm thời trang độc đáo và phong cách. Với sự kết hợp hoàn hảo giữa các kiểu dáng hiện đại và chất liệu cao cấp, chúng tôi cam kết mang đến cho bạn sự thoải mái và tự tin trong mỗi bộ trang phục.
+                                    Welcome to ADAM - the place that provides the most classy and quality fashion products! ADAM is a clothing website with a mission to bring customers unique and stylish fashion products. With the perfect combination of modern styling and premium materials, we're committed to bringing you comfort and confidence in every outfit.
                                 </font>
                             </p>
                             <ul>
@@ -634,8 +626,8 @@
                         <div class="footer-link">
                             <h4>Information</h4>
                             <ul>
-                                <li><a href="#">About Us</a></li>
-                                <li><a href="#">Customer Service</a></li>
+                                <li><a href="about.html">About Us</a></li>
+                                <li><a href="service.html">Customer Service</a></li>
                                 <li><a href="#">Our Sitemap</a></li>
                                 <li><a href="#">Terms &amp; Conditions</a></li>
                                 <li><a href="#">Privacy Policy</a></li>
