--- a/adminAdamShop/pages/chart.html
+++ b/adminAdamShop/pages/chart.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="../css/plugin.min.css">
         <link rel="stylesheet" href="../css/style.css">
 
-        <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="../../adam_shop/images/logo-removebg-preview.png">
 
         <link rel="stylesheet" href="../css/line.css">
     </head>
