--- a/adminAdamShop/pages/register.html
+++ b/adminAdamShop/pages/register.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../css/plugin.min.css">
     <link rel="stylesheet" href="../css/style.css">
 
-    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../adam_shop/images/logo-removebg-preview.png">
 
     <link rel="stylesheet" href="../css/line.css">
 </head>
@@ -27,8 +27,8 @@
                         <div class="edit-profile">
                             <div class="edit-profile__logos">
                                 <a href="index.html">
-                                    <img class="dark" src="../img/logo-dark.png" alt="">
-                                    <img class="light" src="../img/logo-white.png" alt="">
+                                    <img class="dark" src="../../adam_shop/images/logo-removebg-preview.png" alt="">
+                                    <img class="light" src="../../adam_shop/images/logo-removebg-preview.png" alt="">
                                 </a>
                             </div>
                             <div class="card border-0">
