--- a/adminAdamShop/pages/user-list.html
+++ b/adminAdamShop/pages/user-list.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../css/plugin.min.css">
     <link rel="stylesheet" href="../css/style.css">
 
-    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../adam_shop/images/logo-removebg-preview.png">
 
     <link rel="stylesheet" href="../css/line.css">
 </head>
@@ -32,8 +32,8 @@
             <div class="navbar-left">
                 <div class="logo-area">
                     <a class="navbar-brand" href="index.html">
-                        <img class="dark" src="../img/logo-dark.png" alt="logo">
-                        <img class="light" src="../img/logo-white.png" alt="logo">
+                        <img class="dark" src="../../adam_shop/images/logo-removebg-preview.png" alt="logo">
+                        <img class="light" src="../../adam_shop/images/logo-removebg-preview.png" alt="logo">
                     </a>
                     <a href="#" class="sidebar-toggle">
                         <img class="svg" src="../img/svg/align-center-alt.svg" alt="img"></a>
