sua trang admin 2

--- a/adminAdamShop/pages/user-list.html
+++ b/adminAdamShop/pages/user-list.html
@@ -1,13 +1,11 @@
 <!doctype html>
 <html lang="en" dir="ltr">
 
-<!-- Mirrored from demo.dashboardmarket.com/hexadash-html/ltr/users-list.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 02 Mar 2023 05:39:15 GMT -->
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HexaDash</title>
+    <title>ADAM SHOP</title>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700&amp;display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="../css/plugin.min.css">
@@ -38,10 +36,6 @@
                     <a href="#" class="sidebar-toggle">
                         <img class="svg" src="../img/svg/align-center-alt.svg" alt="img"></a>
                 </div>
-                <a href="#" class="customizer-trigger">
-                    <i class="uil uil-edit-alt"></i>
-                    <span>Customize...</span>
-                </a>
                 <div class="top-menu">
                     <div class="hexadash-top-menu position-relative">
                         <ul>
