--- a/adminAdamShop/pages/chart.html
+++ b/adminAdamShop/pages/chart.html
@@ -1,13 +1,11 @@
 <!doctype html>
 <html lang="en" dir="ltr">
 
-    <!-- Mirrored from demo.dashboardmarket.com/hexadash-html/ltr/charts.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 02 Mar 2023 05:39:32 GMT -->
-
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>HexaDash</title>
+        <title>ADAM SHOP</title>
         <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700&amp;display=swap"
             rel="stylesheet">
 
@@ -33,8 +31,8 @@
                 <div class="navbar-left">
                     <div class="logo-area">
                         <a class="navbar-brand" href="index.html">
-                            <img class="dark" src="../img/logo-dark.png" alt="logo">
-                            <img class="light" src="../img/logo-white.png" alt="logo">
+                            <img class="dark" src="../../adam_shop/images/logo-removebg-preview.png" alt="logo">
+                            <img class="light" src="../../adam_shop/images/logo-removebg-preview.png" alt="logo">
                         </a>
                         <a href="#" class="sidebar-toggle">
                             <img class="svg" src="../img/svg/align-center-alt.svg" alt="img"></a>
