--- a/adminAdamShop/pages/product-details.html
+++ b/adminAdamShop/pages/product-details.html
@@ -1,13 +1,12 @@
 <!doctype html>
 <html lang="en" dir="ltr">
 
-<!-- Mirrored from demo.dashboardmarket.com/hexadash-html/ltr/product-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 02 Mar 2023 05:39:06 GMT -->
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HexaDash</title>
+    <title>ADAM SHOP</title>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700&amp;display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="../css/plugin.min.css">
